Default icon should use the image skia created by ResourceBundle

Current code gets 2x image first then shrink to 1x. It should simply use the image skia created by ResourceBundle.

BUG=605884

Review-Url: https://codereview.chromium.org/1916883003
Cr-Commit-Position: refs/heads/master@{#390590}

Former-commit-id: 50ed8e6dddc43144f9aad3d08aab379e19df97a3